fixed layout bugs, add sign up restrictions

--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -50,9 +50,9 @@
             font-size: 1rem;
             border-radius: 3rem;
             border: none;
-            display: flex;
-            justify-content: center;
-            align-items: center;
+            display: flex !important;
+            justify-content: center !important;
+            align-items: center !important;
             background-color: var(--accent-color);
             color: white;
             cursor: pointer;
@@ -94,9 +94,9 @@
                 font-size: 0.85rem;
                 border-radius: 3rem;
                 border: none;
-                display: flex;
-                justify-content: center;
-                align-items: center;
+                display: flex !important;
+                justify-content: center !important;
+                align-items: center !important;
                 cursor: pointer;
             }
     
